--- a/coctail-recipes/src/Components/Header.css
+++ b/coctail-recipes/src/Components/Header.css
@@ -1,75 +1,144 @@
 .header {
-  height: 60px;
-  display: flex;
-  align-items: center;
+  width: 100%;
+  height: 85px;
   background-color: #131921;
   position: sticky;
   top: 0;
   z-index: 100;
 }
 
+.header__container {
+  height: 60px !important;
+  display: flex;
+  align-items: center;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .header__logo {
-  margin: 0px 20px 0px 50px;
+  margin-left: 20px;
+  margin-right: 50px;
 }
 
 .header__logoIcon {
-  height: 50px !important;
+  height: 40px !important;
+  object-fit: contain;
   color: white;
 }
 
 .header__search {
+  height: 30px !important;
   display: flex;
   flex: 1;
-  align-items: center;
-  border-radius: 24px;
 }
 
 .header__searchInput {
-  height: 12px;
   padding: 10px;
   border: none;
+  height: 30px;
   width: 100%;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+}
+
+.header__searchIcon {
+  height: 30px !important;
+  width: 35px !important;
+  padding: 8px;
+  background-color: #ff9900;
+  color: #131a22;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: 50px;
+  margin-right: 20px;
+}
+
+.header__nav > a {
+  margin-right: 20px;
+  text-decoration: none !important;
+}
+
+.header__nav > a:last-child {
+  margin-left: 30px;
+  margin-right: 0px;
+}
+
+.header__option {
+  font-size: 13px;
+  font-weight: 800;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+}
+
+.header__optionShuffle {
+  align-items: center;
+  color: white;
+  height: 16px;
+}
+
+.header__searchInput:focus {
+  outline: none;
 }
 
 .header__searchInput::placeholder {
   color: rgba(0, 0, 0, 0.25);
 }
 
-.header__searchIcon {
-  padding: 2px;
-  height: 22px !important;
-  background-color: #cd9042;
-  color: #131921;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+.header__logoIcon:hover {
+  transition: 200ms;
+  color: #ff9900;
 }
 
-.header__optionLineOne {
-  font-size: 13px;
-  font-weight: 800;
+.header__searchIcon:hover {
+  transition: 200ms;
+  background-color: #ffbb56;
+  padding: 6px;
 }
 
-.header__optionShuffle {
-  display: flex;
-  align-items: center;
+.header__option:hover {
+  transition: 200ms;
+  color: #ff9900;
+  text-decoration: underline 2px #ff9900;
+  text-underline-offset: 3px;
+}
+
+.header__optionShuffle:hover {
+  transition: 200ms;
+  color: #ff9900;
+}
+
+@media (max-width: 739px) {
+  .header__search {
+    display: none;
+  }
+
+  .header__container {
+    justify-content: flex-start;
+  }
+
+  .header__nav {
+    margin-left: 0;
+  }
+}
+
+.header__navBar {
+  width: 100%;
+  height: 25px !important;
+  background-color: #232f3e;
+}
+
+.header__menuButton {
   color: white;
-  height: 16px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
-.header__nav {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.header__option {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-  margin-left: 10px;
-  color: white;
-  text-transform: uppercase;
+.header__menuButton:first-child {
+  margin-left: 20px;
 }
