--- a/coctail-recipes/src/pages/NonAlcoholicCocktail.css
+++ b/coctail-recipes/src/pages/NonAlcoholicCocktail.css
@@ -1,4 +1,4 @@
-.home {
+.nonAlcoholicCocktail {
   display: flex;
   justify-content: center;
   margin-left: auto;
@@ -6,7 +6,7 @@
   max-width: 1500px;
 }
 
-.home__cocktails {
+.nonAlcoholicCocktail__cocktails {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,27 +14,24 @@
   margin-right: auto;
 }
 
-.home__cocktail {
+.nonAlcoholicCocktail__cocktail {
   object-fit: contain;
   width: 100%;
   max-width: 350px;
   margin-right: 20px;
-  transition: transform 300ms;
 }
 
-.home__cocktail:hover {
-  /* transform: scale(1.03);*/
-}
-
-.home__image {
-  width: 100%;
-  object-fit: contain;
-  z-index: -1;
-  margin-top: -150px;
-  margin-bottom: -20px;
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
+/*.nonAlcoholicCoctail__cocktail:hover {
+  transition: 200ms;
+  transform: scale(1.03);
+}*/
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+@media (max-width: 1109px) {
+  .nonAlcoholicCocktail__cocktails {
+    margin-top: 0px;
+  }
 }
