--- a/coctail-recipes/src/Components/Banner.css
+++ b/coctail-recipes/src/Components/Banner.css
@@ -1,5 +1,14 @@
+.banner {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+}
+
 .banner__image {
   width: 100%;
+  max-width: 1500px;
   object-fit: contain;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   z-index: -1;
