--- a/coctail-recipes/src/Components/Cocktails.css
+++ b/coctail-recipes/src/Components/Cocktails.css
@@ -1,10 +1,16 @@
-.cocktails__cocktailsList {
+.cocktails__cocktailsList,
+.cocktails__notFound {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
+}
+
+.cocktails__notFound {
+  margin-top: 20px;
+  font-size: xx-large;
 }
 
 .cocktails__singleCocktail {
