--- a/coctail-recipes/src/Components/Header.css
+++ b/coctail-recipes/src/Components/Header.css
@@ -116,10 +116,11 @@
 
 .header__bottomRowContainer {
   display: flex;
-  position: static !important;
-  width: 100%;
   height: 25px !important;
   background-color: #232f3e;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header__menuButton {
@@ -127,6 +128,7 @@
   margin-left: 20px;
   margin-top: auto;
   margin-bottom: auto;
+  cursor: pointer;
 }
 
 .active .header__option {
